--- a/.github/workflows/deploy-on-push.yml
+++ b/.github/workflows/deploy-on-push.yml
@@ -1,5 +1,8 @@
 name: deploy on push
-on: [push]
+on: 
+  push:
+    branches:
+      - main  # Added space before "main"
 jobs:
   deploy-app:
     runs-on: ubuntu-latest
@@ -9,10 +12,10 @@ jobs:
       - name: copy file to server
         uses: appleboy/scp-action@master
         with:
-          host: ${{secrets.HOST}}
-          username: ${{secrets.SSH_USER_NAME}}
-          port: ${{secrets.SSH_PORT}}
-          key: ${{secrets.SSH_KEY}}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER_NAME }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_KEY }}
           source: "./html/*"
           target: "/var/www/html"
           strip_components: 1
